@@ -49,11 +49,10 @@ setup(name = 'zope.app.intid',
       namespace_packages=['zope', 'zope.app'],
       extras_require = dict(test=['zope.app.testing',
                                   'zope.app.securitypolicy',
-                                  'zope.app.folder',
+                                  'zope.site',
                                   'zope.app.zcmlfiles']),
       install_requires = ['setuptools',
                           'ZODB3',
-                          'zope.app.component',
                           'zope.container',
                           'zope.app.keyreference',
                           'zope.component',
