@@ -54,7 +54,7 @@ Now, we'll add a few folders:
   ... Content-Length: 64
   ... Content-Type: application/x-www-form-urlencoded
   ... 
-  ... type_name=BrowserAdd__zope.app.folder.folder.Folder&new_value=f1""")
+  ... type_name=BrowserAdd__zope.site.folder.Folder&new_value=f1""")
   HTTP/1.1 303 ...
   ...
 
@@ -64,7 +64,7 @@ Now, we'll add a few folders:
   ... Content-Length: 64
   ... Content-Type: application/x-www-form-urlencoded
   ... 
-  ... type_name=BrowserAdd__zope.app.folder.folder.Folder&new_value=f1""")
+  ... type_name=BrowserAdd__zope.site.folder.Folder&new_value=f1""")
   HTTP/1.1 303 ...
   ...
 
@@ -74,7 +74,7 @@ Now, we'll add a few folders:
   ... Content-Length: 64
   ... Content-Type: application/x-www-form-urlencoded
   ... 
-  ... type_name=BrowserAdd__zope.app.folder.folder.Folder&new_value=f2""")
+  ... type_name=BrowserAdd__zope.site.folder.Folder&new_value=f2""")
   HTTP/1.1 303 ...
   ...
 
@@ -84,7 +84,7 @@ Now, we'll add a few folders:
   ... Content-Length: 64
   ... Content-Type: application/x-www-form-urlencoded
   ... 
-  ... type_name=BrowserAdd__zope.app.folder.folder.Folder&new_value=f1""")
+  ... type_name=BrowserAdd__zope.site.folder.Folder&new_value=f1""")
   HTTP/1.1 303 ...
   ...
 
